examples/test/testpolicy11297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11297
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key23: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value6
          key2: value24
          key7: value21
      podSelector:
        matchLabels:
          key15: value36
